<resources>
    <string name="app_name">Courses Application</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="rabbitmq">RabbitMQ</string>
    <string name="b2bmarketing">B2B маркетинг</string>
    <string name="webanalytic">Веб-аналитика</string>
    <string name="game_design">Геймдизайн</string>
    <string name="web_design">Веб-дизайн</string>
    <string name="cinema4d">Cinema 4d</string>
    <string name="parsing">Парсинг</string>
    <string name="three">Three.js</string>
    <string name="python">Python-разработка</string>
    <string name="promt">Промт инженеринг</string>
    <string name="bigdata">Big Data</string>
    <string name="googleanalytic">Google аналитика</string>
    <string name="afmin1c">1С Администрирование</string>
    <string name="trafic">Трафик</string>
    <string name="content_marketing">Контент маркетинг</string>
    <string name="ux">UX исследователь</string>
    <string name="javascript">JavaScript</string>
    <string name="html">HTML</string>
    <string name="Headline">Тысячи курсов в одном месте</string>
    <string name="Continue">Продолжить</string>
    <string name="Login">Вход</string>
    <string name="Email">Email</string>
    <string name="Email_enter">example@gmail.com</string>
    <string name="Password">Пароль</string>
    <string name="Password_enter">Введите пароль</string>
    <string name="No_account">Нету аккаунта?</string>
    <string name="Registration">Регистрация</string>
    <string name="ForgotPassword">Забыл пароль</string>
    <string name="Search_courses">Search courses...</string>
    <string name="Webflow">Webflow</string>
    <string name="main">Главная</string>
    <string name="favorites">Избранное</string>
    <string name="account">Аккаунт</string>
    <string name="by_date_added">По дате добавления</string>
    <string name="java_developer">Java-разработчик с нуля</string>
    <string name="more_detailed">Подробнее</string>
</resources>