<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/black"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.mainactivity.Login">


    <TextView
        android:id="@+id/textViewNoAccaunt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="105dp"
        android:layout_marginTop="432dp"
        android:text="@string/No_account"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewRegistration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="209dp"
        android:layout_marginTop="432dp"
        android:text="@string/Registration"
        android:textColor="@color/green"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="159dp"
        android:layout_marginTop="455dp"
        android:text="@string/ForgotPassword"
        android:textColor="@color/green"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/bnLogin"
        android:layout_width="328dp"
        android:layout_height="42dp"
        android:layout_marginTop="376dp"
        android:backgroundTint="@color/green"
        android:text="@string/Login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="328dp"
        android:layout_height="36dp"
        android:layout_marginTop="140dp"
        android:text="@string/Login"
        android:textColor="@color/white"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textLine"
        android:layout_width="328dp"
        android:layout_height="1dp"
        android:layout_marginTop="502dp"
        android:background="@color/whitegray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="328dp"
        android:layout_height="40dp"
        android:layout_marginTop="534dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <ImageButton
            android:id="@+id/imageButtonVk"
            android:layout_width="156dp"
            android:layout_height="40dp"
            android:background="@drawable/shape_button_vk"
            android:src="@drawable/ic_vk" />

        <ImageButton
            android:id="@+id/imageButtonOk"
            android:layout_width="156dp"
            android:layout_height="40dp"
            android:layout_marginStart="12dp"
            android:background="@drawable/shape_button_ok"
            android:src="@drawable/ic_ok" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="328dp"
        android:layout_height="155dp"
        android:layout_marginTop="204dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textViewEmail"
            android:layout_width="41dp"
            android:layout_height="19dp"
            android:text="@string/Email"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="328dp"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/shape_edittext_login"
            android:contentDescription="@string/Email"
            android:ems="10"
            android:hint="@string/Email_enter"
            android:inputType="textEmailAddress"
            android:paddingStart="16dp"
            android:textColorHint="@color/whitegray"
            android:textSize="15sp"
            tools:ignore="ExtraText" />

        <TextView
            android:id="@+id/textViewPassword"
            android:layout_width="57dp"
            android:layout_height="19dp"
            android:layout_marginTop="10dp"
            android:text="@string/Password"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="328dp"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/shape_edittext_login"
            android:contentDescription="@string/Password_enter"
            android:ems="10"
            android:hint="@string/Password_enter"
            android:paddingStart="16dp"
            android:textColorHint="@color/whitegray"
            android:textSize="15sp"
            tools:ignore="ExtraText" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>